--- a/package.json
+++ b/package.json
@@ -1,22 +1,10 @@
 {
-  "name": "internship-backend",
-  "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "bun run src/index.ts",
-    "build": "bun build src/index.ts --outdir dist",
-    "start": "bun run dist/index.js",
-    "prisma:generate": "prisma generate",
-    "prisma:migrate": "prisma migrate dev"
-  },
-  "dependencies": {
-    "@elysiajs/jwt": "^1.0.6",
-    "@elysiajs/static": "^1.0.3",
-    "elysia": "^1.0.22",
-    "prisma": "^5.10.0",
-    "@prisma/client": "^5.10.0"
+    "build": "bun build src/index.ts --outfile=index.js",
+    "start": "bun index.js"
   },
   "devDependencies": {
-    "typescript": "^5.2.2"
+    "bun-types": "^1.3.3"
   }
 }
